Roughly finish, but UIU Po9 3-

--- a/commutative/week10.tex
+++ b/commutative/week10.tex
@@ -142,7 +142,7 @@ The one-one correspondence is given by
   \end{proof}
 \end{theorem}
 
-\begin{theorem}[Strong form of Hilbert Nullstellensatz]
+\begin{theorem}[Strong form of Hilbert Nullstellensatz] \label{thm:strong-hilbert-null}
   $\Ic(\Vc(I)) = \sqrt{I}$
 
   \begin{proof}
