--- a/main.tex
+++ b/main.tex
@@ -70,6 +70,7 @@
 \usetikzlibrary{arrows}
 \usetikzlibrary{shapes}
 \usetikzlibrary{positioning}
+\usetikzlibrary{decorations.pathmorphing}
 
 \tikzstyle{every picture}+=[remember picture]
 
