--- a/homology/week16.tex
+++ b/homology/week16.tex
@@ -545,12 +545,12 @@ letting $RF$ be a exact functor.
 \end{definition}
 
 \begin{theorem}
-  If $S$ is localizing, then exists a category $\Bc[S^{-1}]$ with
+  If $S$ is localizing, then there exists a category $\Bc[S^{-1}]$ with
   a functor $Q : \Bc \to \Bc[S^{-1}]$ such that
   \begin{enumerate}
     \item $Q(s)$ is an isomorphism for each $s \in S$.
-    \item Given another functor $F : B \to B'$ satisfy condition 1, there exists
-      a unique functor $G : \Bc[S^{-1}] \to B'$ such that $F = G \circ Q$.
+    \item Given another functor $F : \Bc \to \Bc'$ satisfy condition 1, there exists
+      a unique functor $G : \Bc[S^{-1}] \to \Bc'$ such that $F = G \circ Q$.
   \end{enumerate}
   \begin{proof}
     Define a roof to be a pair $(s, t)$ with
