--- a/main.tex
+++ b/main.tex
@@ -271,7 +271,7 @@
 \DeclareMathOperator\Mor{Mor}
 \DeclareMathOperator\cone{cone}
 \DeclareMathOperator\cyl{cyl}
-\newcommand\tridot{\triangle\kern-1.42ex\raisebox{.13ex}{\scalebox{0.7}{$\bullet$}}}
+\newcommand\tridot{\triangle\kern-1.42ex\raisebox{.13ex}{\scalebox{0.7}{$\bullet$}}\kern+0.6ex}
 
 %
 \newcommand{\Resf}[1]{\big|_{#1}}
